# jbig2-polyfill

./: .gitignore  .gitmodules  CMakeLists.txt  build-wasm.sh  build.sh  index.html  readme.md  shell.nix
build-wasm/: jbig2-polyfill.js  jbig2-polyfill.wasm
doc/chat/: ChatGPT-JBIG2-to-BMP-Polyfill.md
img/: test.jbig2
src/: bmp_encoder.cpp  bmp_encoder.hpp  jbig2_wrapper.c  main.cpp  wasm_api.cpp  wasm_api.hpp
tools/: compress-jbig2.sh  compress-jpeg.sh  decompress-jbig2.sh  generate-test-images.sh
